# indigestible

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: newsletter-digest.yml
docs/: github-action.md  html-to-markdown.md  two-step-fetch.md
src/: config.py  fetcher.py  main.py  summarize.py  summarizer.py
